<resources>
    <string name="app_name">Material design</string>
    <string name="hint_text">text</string>
    <string name="btn_snackbar_call">Snackbar call</string>
    <string name="on_state_changed_counter">onStateChanged counter:</string>
    <string name="on_slide_counter">onSlide counter:</string>
    <string name="_0">0</string>
    <string name="flat_button">flat button</string>
    <string name="raised_button">raised button</string>
    <string name="elisabeth_barker">Elisabeth Barker</string>
    <string name="photo">photo</string>
    <string name="elisabeth_email">ElisabethBarker@gmail.com</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="events">Events</string>
    <string name="dashboard">Dashboard</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="activities">Activities</string>
    <string name="logout">Logout</string>
    <string name="menu_title_progressbar">ProgressBar</string>
    <string name="progress_bar_show">Show</string>
    <string name="progress_bar_hide">Hide</string>
    <string name="colored_rocks_china">Colored Rocks, China</string>
</resources>
