<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"/>
    <item
        android:id="@+id/event"
        android:title="@string/events"
        android:icon="@drawable/ic_event_black_24dp"/>
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_black_24dp"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_black_24dp"/>
    <item
        android:id="@+id/activities"
        android:title="@string/activities"
        android:icon="@drawable/ic_trending_up_black_24dp"/>
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"/>

    <item android:title="@string/menu_title_progressbar">
        <menu>
            <item
                android:id="@+id/progressBarOn"
                android:title="@string/progress_bar_on" />
            <item
                android:id="@+id/progressBarOff"
                android:title="@string/progress_bar_off" />
        </menu>
    </item>

</menu>